--- a/loginlibrary/src/main/res/layout/activity_login.xml
+++ b/loginlibrary/src/main/res/layout/activity_login.xml
@@ -1,47 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/lytMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <EditText
 
             android:id="@+id/etUserName"
-            android:layout_width="309dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="20dp"
             android:hint="User Name"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            app:layout_constraintTop_toTopOf="parent" />
-        <EditText
-            android:layout_width="309dp"
-            android:layout_height="wrap_content"
+            android:inputType="textPersonName" />
+
+        <EditText android:id="@+id/etPassword"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
             android:inputType="textPassword"
-            android:ems="10"
-            android:hint="password"
-            android:id="@+id/etPassword" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/etUserName" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:hint="password" />
         <Button
             android:text="Login"
-            android:layout_width="309dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnLogin" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/etPassword" app:layout_constraintVertical_bias="0.116"/>
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:id="@+id/btnLogin" />
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
